--- a/SharpRemote/SharpRemote.Android/SharpRemote.Android.csproj
+++ b/SharpRemote/SharpRemote.Android/SharpRemote.Android.csproj
@@ -56,6 +56,9 @@
     <PackageReference Include="rda.SocketsForPCL">
       <Version>2.0.2</Version>
     </PackageReference>
+    <PackageReference Include="Rg.Plugins.Popup">
+      <Version>1.2.0.223</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Android.Arch.Core.Common">
       <Version>1.1.1.3</Version>
     </PackageReference>
@@ -112,14 +115,15 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Resources\drawable\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\SharpRemote\SharpRemote.csproj">
       <Project>{19F234FE-E997-45DD-BC04-3F3469D38209}</Project>
       <Name>SharpRemote</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\keypad_black.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
