--- a/SharpRemote/SharpRemote/SharpRemote.csproj
+++ b/SharpRemote/SharpRemote/SharpRemote.csproj
@@ -7,11 +7,20 @@
 
   <ItemGroup>
     <PackageReference Include="rda.SocketsForPCL" Version="2.0.2" />
+    <PackageReference Include="Rg.Plugins.Popup" Version="1.2.0.223" />
     <PackageReference Include="Xamarin.Forms" Version="4.4.0.991265" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Views\" />
+    <Compile Update="Views\RemotePage.xaml.cs">
+      <DependentUpon>RemotePage.xaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Views\KeypadPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
