--- a/SharpRemote/SharpRemote.Android/SharpRemote.Android.csproj
+++ b/SharpRemote/SharpRemote.Android/SharpRemote.Android.csproj
@@ -139,5 +139,15 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\add_black.xml" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\splash_screen.jpg">
+      <Generator>MSBuild:UpdateGeneratedFiles</Generator>
+    </AndroidResource>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\splash_screen_layout.xml">
+      <SubType>Designer</SubType>
+    </AndroidResource>
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
